# Hainel

./: .gitignore  QUICKSTART.md  README.md  docker-compose.yml  git-push.bat  功能备注.md  智能错题本系统架构.md
backend/: README.md  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/v1/: __init__.py  ai.py  auth.py  errors.py  knowledge.py  practice.py  reports.py
backend/app/core/: cache.py  database.py  exceptions.py  security.py
backend/app/models/: __init__.py  ai_analysis.py  error_question.py  knowledge_point.py  practice_record.py  user.py
backend/app/schemas/: ai.py  common.py  error_question.py  user.py
docker/: backend.Dockerfile  frontend.Dockerfile  nginx.conf
frontend/: README.md  index.html  package.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/api/: ai.ts  auth.ts  error.ts
frontend/src/assets/styles/: main.scss
frontend/src/layouts/: AuthLayout.vue  DefaultLayout.vue
frontend/src/router/: index.ts
frontend/src/stores/: app.ts  error.ts  user.ts
frontend/src/types/: api.ts
frontend/src/utils/: request.ts
frontend/src/views/auth/: Login.vue  Register.vue
frontend/src/views/dashboard/: Dashboard.vue
frontend/src/views/error/: NotFound.vue
frontend/src/views/errors/: AddError.vue  ErrorDetail.vue  ErrorList.vue
frontend/src/views/knowledge/: KnowledgeGraph.vue
frontend/src/views/practice/: PracticeList.vue
frontend/src/views/reports/: ReportView.vue
